tmux - active window title color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,3 +3,5 @@ setw -g mode-keys vi
 set -g mouse on
 # to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+# active window title color
+setw -g window-status-current-style fg=black,bg=white
