evil mode undo-redo; idea quickscope; tmux copy into clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,6 @@ set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 # active window title color
 setw -g window-status-current-style fg=black,bg=white
+
+# move tmux copy buffer into x clipboard
+bind C-y run "tmux save-buffer - | xclip -i"
